completed title casing and favorites assignments

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,4 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <h1>Angular</h1>
-<courses></courses>
+<app-title-casing></app-title-casing>
