--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,23 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<h1>Angular</h1>
-<!-- <app-favorite [isFavorite]="post.isFavorite" (change)="onFavoriteChanged($event)"></app-favorite> -->
+<!-- <h1>Angular</h1> -->
+<!-- <app-favorite 
+  [isFavorite]="post.isFavorite" 
+  (change)="onFavoriteChanged($event)">
+</app-favorite> -->
 
-<bootstrap-panel>
+<!-- <bootstrap-panel>
     <ng-container class="heading">Heading</ng-container>
     <div class="body">
         <h2>Body</h2>
         <p>Some Content here...</p>
     </div>
-</bootstrap-panel>
+</bootstrap-panel> -->
+
+
+<app-like
+  [likesCount]="tweet.likesCount"
+  [isLiked]="tweet.isLiked"
+  (change)="onLikedChanged($event)">
+</app-like>
