--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,13 @@
     No courses yet
 </ng-template> -->
 
-<ul class="nav nav-pills">
+<!-- <app-like
+  [likesCount]="tweet.likesCount"
+  [isLiked]="tweet.isLiked"
+  (change)="onLikedChanged($event)">
+</app-like> -->
+
+<!-- <ul class="nav nav-pills">
     <li [class].active="viewMode == 'map'"><a (click)="viewMode = 'map'"href="">Map View</a></li>
     <li [class].active="viewMode == 'list'"><a (click)="viewMode = 'list'"href="">List View</a></li>
 </ul>
@@ -37,10 +43,24 @@
     <div *ngSwitchCase="'map'">Map View Content</div>
     <div *ngSwitchCase="'list'">List View Content</div>
     <div *ngSwitchDefault>Otherwise</div>
-</div>
+</div> -->
 
-<app-like
-  [likesCount]="tweet.likesCount"
-  [isLiked]="tweet.isLiked"
-  (change)="onLikedChanged($event)">
-</app-like>
+
+<!-- <ul class="nav nav-pills">
+    <li [class.active]="viewMode== 'map'"><a (click)="viewMode = 'map'" >Map View</a></li>
+    <li [class.active]="viewMode== 'list'" ><a (click)="viewMode = 'list'" >List View</a></li>
+</ul>
+<div [ngSwitch]="viewMode">
+    <div *ngSwitchCase="'map'">Map View Content</div>
+    <div *ngSwitchCase="'list'">List View Content</div>
+    <div *ngSwitchDefault>Otherwise</div>
+</div> -->
+
+<button (click)="onAdd()">Add</button>
+<ul>
+    <li *ngFor="let course of courses; even as isEven">
+        {{ course.name }} <span *ngIf="isEven">Even!</span>
+        <button (click)="onRemove(course)">Remove</button>
+    </li>
+</ul>
+
