--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,11 +56,18 @@
     <div *ngSwitchDefault>Otherwise</div>
 </div> -->
 
-<button (click)="onAdd()">Add</button>
+<!-- <button (click)="onAdd()">Add</button>
 <ul>
     <li *ngFor="let course of courses; even as isEven">
         {{ course.name }} <span *ngIf="isEven">Even!</span>
         <button (click)="onRemove(course)">Remove</button>
+    </li>
+</ul> -->
+
+<button (click)="loadCourses()">Load Courses</button>
+<ul>
+    <li *ngFor="let course of courses; trackBy: trackCourse"> 
+            {{ course.name}}
     </li>
 </ul>
 
