--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,10 +64,21 @@
     </li>
 </ul> -->
 
-<button (click)="loadCourses()">Load Courses</button>
+<!-- <button (click)="loadCourses()">Load Courses</button>
 <ul>
     <li *ngFor="let course of courses; trackBy: trackCourse"> 
             {{ course.name}}
     </li>
-</ul>
+</ul> -->
+
+<!-- <app-favorite></app-favorite> -->
+
+<!-- <input type="text" appInputFormat [format]="'uppercase'"> -->
+
+<!-- <input type="text" [appInputFormat]="'uppercase'"> -->
+
+
+<app-zippy title="Shipping Details">
+    Shipping Details Content
+</app-zippy>
 
