--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,7 +78,8 @@
 <!-- <input type="text" [appInputFormat]="'uppercase'"> -->
 
 
-<app-zippy title="Shipping Details">
+<!-- <app-zippy title="Shipping Details">
     Shipping Details Content
-</app-zippy>
+</app-zippy> -->
 
+<app-contact-form></app-contact-form>
