--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,4 +82,6 @@
     Shipping Details Content
 </app-zippy> -->
 
-<app-contact-form></app-contact-form>
+<!-- <app-contact-form></app-contact-form> -->
+
+<app-udemy-form></app-udemy-form>
