--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -84,4 +84,6 @@
 
 <!-- <app-contact-form></app-contact-form> -->
 
-<app-udemy-form></app-udemy-form>
+<!-- <app-udemy-form></app-udemy-form> -->
+
+<signup-form></signup-form>
