--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -86,4 +86,6 @@
 
 <!-- <app-udemy-form></app-udemy-form> -->
 
-<signup-form></signup-form>
+<!-- <signup-form></signup-form> -->
+
+<app-new-password-form></app-new-password-form>
