--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -88,4 +88,6 @@
 
 <!-- <signup-form></signup-form> -->
 
-<app-new-password-form></app-new-password-form>
+<!-- <app-new-password-form></app-new-password-form> -->
+
+<app-posts></app-posts>
