--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -90,4 +90,6 @@
 
 <!-- <app-new-password-form></app-new-password-form> -->
 
-<app-posts></app-posts>
+<!-- <app-posts></app-posts> -->
+
+<app-followers></app-followers>
