--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -92,4 +92,7 @@
 
 <!-- <app-posts></app-posts> -->
 
-<app-followers></app-followers>
+<!-- <app-followers></app-followers> -->
+
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
