--- a/angular-tour-of-heroes/src/app/heroes/heroes.component.html
+++ b/angular-tour-of-heroes/src/app/heroes/heroes.component.html
@@ -1,10 +1,10 @@
 <h2>My Heroes</h2>
-<ul>
+<ul class="heroes">
     <li *ngFor="let hero of heroes">
-        <span class="mat-badge">{{hero.id}}</span> {{hero.name}}
+        <a routerLink="/detail/{{hero.id}}">
+            <span class="badge">{{hero.id}}</span> {{hero.name}}
+        </a>
     </li>
 </ul>
-<!-- <div>
-    <label for="name">Hero name: </label>
-    <input id="name" [(ngModel)]="hero.name" placeholder="name">
-  </div> -->
+
+
